--- a/Fractals/armada.html
+++ b/Fractals/armada.html
@@ -21,7 +21,7 @@
                     <a href="Fractals.html">Visualizer</a>
                 </li>
                 <li>
-                    <a href="">GitHub</a>
+                    <a href="https://github.com/rickylao/CSC-212-Recursivegraphics">GitHub</a>
                 </li>
                 <li>
                     <a href="armada.html">Armada</a>
