--- a/armada.html
+++ b/armada.html
@@ -18,7 +18,7 @@
             </div>
             <ul class="nav-links">
 				<li>
-                    <a href="Fractals.html">Visualizer</a>
+                    <a href="index.html">Visualizer</a>
                 </li>
                 <li>
                     <a href="https://github.com/rickylao/CSC-212-Recursivegraphics">GitHub</a>
