--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <!--Links in the nav bar as a ul-->
                 <ul class="nav-links">
     				<li>
-                        <a href="https://rickylao.github.io/CSC-212-Recursivegraphics.github.io/">Visualizer</a>
+                        <a href="index.html">Visualizer</a>
                     </li>
                     <li>
                         <a href="https://github.com/rickylao/CSC-212-Recursivegraphics">GitHub</a>
