Added Mandelbrot set

--- a/armada.html
+++ b/armada.html
@@ -26,6 +26,9 @@
                 <li>
                     <a href="armada.html">Armada</a>
                 </li>
+                <li>
+                    <a href="mandelbrot.html">Mandelbrot Set</a>
+                </li>
             </ul>
         </nav>
     </header>
