--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a href="armada.html">Armada</a>
                     </li>
                     <li>
-                        <a href="mandelbrot.html">Mandelbrot Set</a>
+                        <a href="mandelbrot.html">Mandelbrot</a>
                     </li>
                 </ul>
 
