--- a/armada.html
+++ b/armada.html
@@ -27,7 +27,7 @@
                     <a href="armada.html">Armada</a>
                 </li>
                 <li>
-                    <a href="mandelbrot.html">Mandelbrot Set</a>
+                    <a href="mandelbrot.html">Mandelbrot</a>
                 </li>
             </ul>
         </nav>
